--- a/src/main/webapp/form_purchase.html
+++ b/src/main/webapp/form_purchase.html
@@ -166,22 +166,71 @@
     });
 </script>
 <script>
-    const dataSet = [
-        ['', '', '', '采购用途0', '', '0'],
-        ['', '', '', '采购用途1', '', '0'],
-    ];
-    const dataSets = [
-        ['aaa1', '规格1', '20', '单位', 'fenlei', '10.0', '2000-12-24', '300', '20', '1hao', 'beizhu1'],
-        ['aaa2', '规格', '20', '单位', 'fenlei', '10.0', '2000-12-24', '300', '20', '1hao', 'beizhu2'],
-        ['aaa3', '规格1', '20', '单位', 'fenlei', '10.0', '2000-12-24', '300', '20', '1hao', 'beizhu3'],
-        ['aaa4', '规格', '20', '单位', 'fenlei', '10.0', '2000-12-24', '300', '20', '1hao', 'beizhu4'],
-        ['aaa5', '规格1', '20', '单位', 'fenlei', '10.0', 'xxxx-xx', '300', '20', '1hao', 'beizhu5']
-    ];
+    var temp_user_id;
+    var temp_data;
+
+    console.log("--flag-1-");
+
+    $.ajax({
+        async: false,
+        type : "post",
+        url : "user/findOne",
+        success : function(user) {
+            console.log("--flag-findOne-");
+            temp_user_id = user.user_id;
+            console.log("user.user_id"+user.user_id);
+        }
+    });
+    // 初始化，获取首页表格数据
+    $.ajax({
+        async: false,
+        data: {user_id: temp_user_id},
+        type : "post",
+        url : "purchase/initTable",
+        success : function(data) {
+            console.log("--flag-inittable-");
+            temp_data=data.data;
+        }
+    });
+
+    function json2Array(jsonData, list_or_not) {
+        var jsonsString = jsonData.slice(1, jsonData.length - 1);
+        var jsonStrings = jsonsString.split("},");
+        var length = jsonStrings.length;
+        var jsons = [];
+        for (var i = 0; i !== length-1; ++i) {
+            jsonStrings[i] += '}';
+        }
+        var source = [[]];
+        for (var i = 0; i !== length; ++i) {
+            //console.log("$"+jsonStrings[i]);
+            jsons[i] = eval('(' + jsonStrings[i] + ')');
+            var data = [];
+            for(var key in jsons[i]) {
+                if(i === 0) {
+                    source[0].push(key);
+                }
+                console.log("i="+i+"|key="+key+"|json[i,key]="+jsons[i][key]);
+                if(!list_or_not || key !== "object_id" ) {
+                    data.push(jsons[i][key]);
+                } else {
+                    console.log("跳过在执行一次")
+                }
+            }
+            source.push(data);
+        }
+        return source.slice(1); //删除第1行
+    }
+    //console.log("temp_data=\n"+temp_data);
+    temp_data = json2Array(temp_data, false)
+
+    const dataSets = [];  //初始化物品清单数据源
+    //console.log("temp_data1=\n"+temp_data);
     $(document).ready(function() {
         $(function(){
             var table = $('#table').DataTable({
                 retrieve: true,
-                data:dataSet,
+                data:temp_data,
                 columns:[
                     {
                         'field': "purchase_requisition_id",
@@ -261,9 +310,60 @@
                 }
             });
 
+            var temp_list_data;
+
+            // 点击 物品清单
+            $("table tbody").on("click",".list-btn",function (){
+                // TODO: 待办 - 进入物品清单弹窗，刷新表单
+                //$('#listTable').dataTable().api().draw();
+
+                var tds=$(this).parents("tr").children();
+                var temp_order_id = tds[1].innerText;
+                //console.log("temp_order_id"+temp_order_id);
+                $.ajax({
+                    async: false,
+                    data: {order_id: temp_order_id},
+                    type: "post",
+                    url : "purchase/initListTable",
+                    success : function(data) {
+                        //console.log("--flag-initListTable-");
+                        temp_list_data=data.data;
+                    }
+                });
+                temp_list_data = json2Array(temp_list_data, true)
+
+                // console.log("物品清单数据样例=\n"+dataSets);
+                // console.log("物品清单数据=\n"+temp_list_data);
+                // var len, i;
+                // for(i=0, len=temp_list_data.length; i<len; i++) {
+                //     dataSets.push(temp_list_data[i]);
+                // }
+                // console.log(dataSets);
+                // 更新表格数据
+                $('#listTable').dataTable().api().clear();
+                $('#listTable').dataTable().api().rows.add(temp_list_data);
+                $('#listTable').dataTable().api().draw();
+
+                var arr = tds[5].innerText;
+                console.log(arr);
+                if(arr==='已提交'||arr==='审核通过'){
+                    $('.list-edit-btn').attr('disabled',true);
+                    $('.list-delete').attr('disabled',true);
+                    $('.list-top-btn').attr('disabled',true);
+                }
+                if(arr==='未提交'||arr==='审核未通过'){
+                    $('.list-edit-btn').attr('disabled',false);
+                    $('.list-delete').attr('disabled',false);
+                    $('.list-top-btn').attr('disabled',false);
+                }
+
+                $('#updateModal').modal('show');
+            })
+
             var listtable = $('#listTable').DataTable({
                 retrieve: true,
                 data:dataSets,
+                //ajax: "json/PurchaseListData.txt",
                 columns:[
                     {
                         'field': "name",
@@ -313,11 +413,6 @@
                         'defaultContent' : "",
                         'sClass': 'text-center'
                     }, {
-                        'field': "warehouse_id",
-                        'title': '仓库',
-                        'defaultContent' : "",
-                        'sClass': 'text-center'
-                    }, {
                         'field': "notes",
                         'title': '备注',
                         'defaultContent' : "",
@@ -363,26 +458,7 @@
                 }
             });
 
-            // 点击 物品清单
-            $("table tbody").on("click",".list-btn",function (){
-                // $('#listTable').dataTable().api().draw();
-                // $('#listTable').dataTable().reload();
-                var tds=$(this).parents("tr").children();
-                var arr = tds[5].innerText;
-                console.log(arr);
-                if(arr==='已提交'||arr==='审核通过'){
-                    $('.list-edit-btn').attr('disabled',true);
-                    $('.list-delete').attr('disabled',true);
-                    $('.list-top-btn').attr('disabled',true);
-                }
-                if(arr==='未提交'||arr==='审核未通过'){
-                    $('.list-edit-btn').attr('disabled',false);
-                    $('.list-delete').attr('disabled',false);
-                    $('.list-top-btn').attr('disabled',false);
-                }
 
-                $('#updateModal').modal('show');
-            })
 
             // 点击 提交 按钮
             $("table tbody").on("click",".submit-btn",function (){
@@ -443,7 +519,7 @@
                 $(this).toggleClass("save-btn");
             });
 
-            //申请表修改保存
+            // 申请表修改保存
             $("#table tbody").on("click",".save-btn",function(){
                 var row=table.row($(this).parents("tr"));
                 var tds=$(this).parents("tr").children();
@@ -484,16 +560,48 @@
                 var row=listtable.row($(this).parents("tr"));
                 var tds=$(this).parents("tr").children();
                 $.each(tds, function(i,val){
+                    console.log("|"+tds[i].innerText+"|");
                     var jqob=$(val);
                     //把input变为字符串
-                    console.log(!jqob.has('button').length);
                     if(!jqob.has('button').length){
                         var txt=jqob.children("input").val();
-                        console.log(jqob.children("input"));
                         jqob.html(txt);
                         listtable.cell(jqob).data(txt);//修改DataTables对象的数据
                     }
                 });
+
+                var front_end_data = "";
+                if (tds[0].innerText !== "") front_end_data += "name="+tds[0].innerText+"&";
+                if (tds[1].innerText !== "") front_end_data += "specification="+tds[1].innerText+"&";
+                if (tds[2].innerText !== "") front_end_data += "quantity="+tds[2].innerText+"&";
+                if (tds[3].innerText !== "") front_end_data += "unit="+tds[3].innerText+"&";
+                if (tds[4].innerText !== "") front_end_data += "classification="+tds[4].innerText+"&";
+                if (tds[5].innerText !== "") front_end_data += "price="+tds[5].innerText+"&";
+                if (tds[6].innerText !== "") front_end_data += "expiration_time="+tds[6].innerText+"&";
+                if (tds[7].innerText !== "") front_end_data += "lower_limit="+tds[7].innerText+"&";
+                if (tds[8].innerText !== "") front_end_data += "upper_limit="+tds[8].innerText+"&";
+                if (tds[9].innerText !== "") front_end_data += "notes="+tds[9].innerText+"&";
+                front_end_data = front_end_data.substring(0, front_end_data.length-1);  //删除最后一个字符
+
+                $.get("user/findOne", {}, function (data) {
+                    // 获取当前登陆的用户id
+                    front_end_data += "requisition_user_id="+data.user_id;
+                    console.log("front_end_data="+front_end_data);
+                    // 把前端数据传给后端
+                    $.post("purchase/createOrUpdateItems", front_end_data, function (data) {
+                        console.log("在接受后端数据之后");
+                        if (data.flag) {
+                            alert("提交成功");
+                            tds[5].innerText = '已提交';
+                            // 禁用按钮：应该放入点击确认
+                            $(this).attr('disabled',true);
+                            tds.find('.edit-btn').attr('disabled',true);
+                        } else {
+                            alert("提交失败");
+                        }
+                    })
+                });  // end of $.get("user/findOne"...
+
                 $(this).html("编辑");
                 $(this).toggleClass("list-edit-btn");
                 $(this).toggleClass("list-save-btn");
@@ -525,7 +633,7 @@
             });
 
 
-            // 根据 申请当前状态，设置按钮是否可用
+            // 根据 申请当前状态的数值，设置前端表格的文字，以及对应行按钮是否可用
             $("#table tbody tr").each(function () {
                 var a = $(this).children();//获取每一行
                 var arr = a[5].innerText;//取得第六列的值
