--- a/src/main/webapp/form_purchase.html
+++ b/src/main/webapp/form_purchase.html
@@ -210,7 +210,7 @@
                 if(i === 0) {
                     source[0].push(key);
                 }
-                console.log("i="+i+"|key="+key+"|json[i,key]="+jsons[i][key]);
+                //console.log("i="+i+"|key="+key+"|json[i,key]="+jsons[i][key]);
                 if(!list_or_not || key !== "object_id" ) {
                     data.push(jsons[i][key]);
                 } else {
@@ -311,6 +311,7 @@
             });
 
             var temp_list_data;
+            var temp_order_id;  // 本条订单的order——id
 
             // 点击 物品清单
             $("table tbody").on("click",".list-btn",function (){
@@ -318,31 +319,26 @@
                 //$('#listTable').dataTable().api().draw();
 
                 var tds=$(this).parents("tr").children();
-                var temp_order_id = tds[1].innerText;
+                temp_order_id = tds[1].innerText;
                 //console.log("temp_order_id"+temp_order_id);
                 $.ajax({
-                    async: false,
+                    async: true,  // true 同步，false异步
                     data: {order_id: temp_order_id},
                     type: "post",
                     url : "purchase/initListTable",
                     success : function(data) {
                         //console.log("--flag-initListTable-");
                         temp_list_data=data.data;
+                        temp_list_data = json2Array(temp_list_data, true)
                     }
                 });
-                temp_list_data = json2Array(temp_list_data, true)
 
-                // console.log("物品清单数据样例=\n"+dataSets);
-                // console.log("物品清单数据=\n"+temp_list_data);
-                // var len, i;
-                // for(i=0, len=temp_list_data.length; i<len; i++) {
-                //     dataSets.push(temp_list_data[i]);
-                // }
-                // console.log(dataSets);
+                $('#updateModal').modal('show');  // 显示弹窗表格
                 // 更新表格数据
                 $('#listTable').dataTable().api().clear();
                 $('#listTable').dataTable().api().rows.add(temp_list_data);
                 $('#listTable').dataTable().api().draw();
+
 
                 var arr = tds[5].innerText;
                 console.log(arr);
@@ -459,7 +455,6 @@
             });
 
 
-
             // 点击 提交 按钮
             $("table tbody").on("click",".submit-btn",function (){
                 var tds=$(this).parents("tr").children();
@@ -469,15 +464,43 @@
                     // 提交的代码
                     if(confirm('确认提交申请？')){  //确认提交
                         // 拼后端BeanUtils所需的map串
+
+                        // 时间格式纠正
+                        Date.prototype.toLocaleString = function() {
+                            function addZero(num) {
+                                return num < 10 ? "0" + num : num;
+                            }
+                            // 按自定义拼接格式返回
+                            return this.getFullYear() + "/" + addZero(this.getMonth() + 1) + "/" + addZero(this.getDate()) + " " +
+                                addZero((this.getHours()+24-8)%24) + ":" + addZero(this.getMinutes()) + ":" + addZero(this.getSeconds());
+                        };
+                        var requisition_dateTime = "", approval_date = "";
+                        if (tds[4].innerText !== "")
+                            requisition_dateTime = (new Date(eval(tds[4].innerText))).toLocaleString();
+                        if (tds[8].innerText !== "")
+                            approval_date = (new Date(eval(tds[8].innerText))).toLocaleString();
+
+                        // 状态改回数值
+                        var shenqing_state = '';
+                        if(arr==='未提交'){
+                            shenqing_state = '0';
+                        }else if(arr==='已提交'){
+                            shenqing_state = '1';
+                        }else if(arr==='审核通过'){
+                            shenqing_state = '2';
+                        }else if(arr==='审核未通过'){
+                            shenqing_state = '3';
+                        }
+
                         var front_end_data = "";
                         if (tds[0].innerText !== "") front_end_data += "purchase_requisition_id="+tds[0].innerText+"&";
                         if (tds[1].innerText !== "") front_end_data += "purchase_order_id="+tds[1].innerText+"&";
                         if (tds[3].innerText !== "") front_end_data += "purpose="+tds[3].innerText+"&";
-                        if (tds[4].innerText !== "") front_end_data += "requisition_date="+tds[4].innerText+"&";
-                        if (tds[5].innerText !== "") front_end_data += "&state="+tds[5].innerText+"&";
+                        if (tds[4].innerText !== "") front_end_data += "requisition_date="+requisition_dateTime+"&";
+                        if (tds[5].innerText !== "") front_end_data += "&state="+shenqing_state+"&";
                         if (tds[6].innerText !== "") front_end_data += "&approval_user_id="+tds[6].innerText+"&";
                         if (tds[7].innerText !== "") front_end_data += "&approval_opinions="+tds[7].innerText+"&";
-                        if (tds[8].innerText !== "") front_end_data += "&approval_date="+tds[8].innerText+"&";
+                        if (tds[8].innerText !== "") front_end_data += "&approval_date="+approval_date+"&";
                         // front_end_data = front_end_data.substring(0, front_end_data.length-1);  //删除最后一个字符
 
                         $.get("user/findOne", {}, function (data) {
@@ -581,25 +604,27 @@
                 if (tds[7].innerText !== "") front_end_data += "lower_limit="+tds[7].innerText+"&";
                 if (tds[8].innerText !== "") front_end_data += "upper_limit="+tds[8].innerText+"&";
                 if (tds[9].innerText !== "") front_end_data += "notes="+tds[9].innerText+"&";
-                front_end_data = front_end_data.substring(0, front_end_data.length-1);  //删除最后一个字符
-
+                //front_end_data = front_end_data.substring(0, front_end_data.length-1);  //删除最后一个字符
+                console.log("front_end_data"+front_end_data)
                 $.get("user/findOne", {}, function (data) {
                     // 获取当前登陆的用户id
                     front_end_data += "requisition_user_id="+data.user_id;
                     console.log("front_end_data="+front_end_data);
                     // 把前端数据传给后端
-                    $.post("purchase/createOrUpdateItems", front_end_data, function (data) {
-                        console.log("在接受后端数据之后");
-                        if (data.flag) {
-                            alert("提交成功");
-                            tds[5].innerText = '已提交';
-                            // 禁用按钮：应该放入点击确认
-                            $(this).attr('disabled',true);
-                            tds.find('.edit-btn').attr('disabled',true);
-                        } else {
-                            alert("提交失败");
-                        }
-                    })
+                    $.post("purchase/getOrderId", {order_id: temp_order_id}, function () {
+                        $.post("purchase/UpdateItemsList", front_end_data, function (data) {
+                            console.log("在接受后端数据之后");
+                            if (data.flag) {
+                                alert("提交成功");
+                                // 禁用按钮：应该放入点击确认
+                                $(this).attr('disabled',true);
+                                tds.find('.edit-btn').attr('disabled',true);
+                            } else {
+                                alert("提交失败");
+                            }
+                        });
+                    });
+
                 });  // end of $.get("user/findOne"...
 
                 $(this).html("编辑");
